2015-04-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parser): Add code to receive 
	"values" configuration value.
	(parse_texi_line): First implementation.
	* Parsetexi/Parsetexi.xs (parse_string, store_value)
	(wipe_values): Expose.
	* api.c (parse_string): New function.
	* macro.c (wipe_values): New function.

2015-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_command_args) <CM_synindex>: Record
	index synonym.
	* api.c (build_single_index_data): Create "contained_indices" 
	and "merged_in".

2015-03-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_def_args.
	(DEF_ARGS_EXTRA): New type.
	* api.c (element_to_perl_hash),
	* dump_perl.c (dump_extra): Handle extra_def_args.
	* def.c (parse_def, next_bracketed_or_word): First 
	implementations.
	* end_line.c <ET_def_line>: Call parse_def.  Don't record the 
	index entry yet.

2015-03-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* close.c (close_command_cleanup): @multitable handling.

2015-03-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Handle warnings 
	as well as error messages.
	* close.c (close_command_cleanup) <CF_blockitem>: More complete.
	* multitable.c (gather_previous_item): Implement.

2015-03-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* counter.c: New file.
	* commands.h (command_name): New macro.

2015-03-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_commanad_args) <CM_defindex>: Call 
	add_index.
	* handle_commands.c (handle_misc_command) <CM_node>: Set 
	remaining_args on element.
	* api.c (element_to_perl_hash): Output 'line_nr'.

2015-02-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_deleted.
	* parser.c (abort_empty_line): Remove "spaces_before_argument" 
	extra value.
	(process_remaining_on_line): Add check for empty input ("EMPTY 
	TEXT").
