@@ -29,7 +29,7 @@ libparsetexi_a_SOURCES=api.c api.h \
 		  separator.c \
 		  multitable.c \
 		  indices.c \
-		  macro.c \
+		  macro.c macro.h \
 		  handle_commands.c handle_commands.h \
 		  def.c def.h \
 		  dump_perl.c dump_perl.h \
